# srb2-uwp

./: .gitignore  CMakeLists.txt  auto-setup-windows-uwp-debug.cmd  auto-setup-windows-uwp.cmd  auto-setup-windows.cmd  vcpkg.json
cmake/Modules/: FindSDL2.cmake
src/: CMakeLists.txt  d_main.c  g_game.c  i_tcp.c  lua_mathlib.c  m_easing.c  m_menu.c  m_random.c  r_fps.c  r_splats.c  screen.c
src/hardware/: hw_main.c
src/sdl/: CMakeLists.txt  i_system.c  i_video.c  mixer_sound.c
src/uwp/: Package.appxmanifest  SRB2_TemporaryKey.pfx  gamepad_uwp.cpp  system_uwp.cpp
src/win32/: Srb2win.rc  win_dbg.c
